# GMOR

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  demo_pipeline.cpp  demo_pipeline.h  main.cpp
cmake/: RegistrationFactoryConfig.cmake.in
exp/: CMakeLists.txt  exp_3DMatch.hpp  exp_KITTI.hpp  exp_base.hpp  exp_config.h  exp_io.hpp  exp_utils.cpp  exp_utils.h  utils_3DMatch.h  utils_KITTI.h
include/: gmor.h  gmor_node.hpp  interval_stabbing.hpp  matcher.hpp  registration_base.hpp  registration_utils.hpp  sphere_projection.hpp  sweepline.hpp  trde.h  trde_node.hpp
scripts/: test_3DMatch_FCGF.sh  test_3DMatch_FPFH.sh  test_3DMatch_Predator.sh  test_KITTI.sh
src/: gmor.cpp  trde.cpp
